--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -33,10 +33,10 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <div class="Mntitle"><h1>Meet Your Forever</h1></div>
+        <div class="Mntitle"><h1>find your best friend</h1></div>
         <hr />
         <h2 class="Mntitle">
-          Then find the one with the greatest compatibility!
+         find the one with the greatest compatibility!
         </h2>
       </div>
 
@@ -51,7 +51,8 @@
 
       <h3><strong>Question 1</strong></h3>
       <h4>I like to take risks and challenges excite you.</h4>
-      <select data-placeholder="" class="chosen-select" id="q1">
+      <select >
+          <option selected hidden>Choose here</option>
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -170,15 +171,7 @@
       <br />
       <br />
 
-      <footer class="footer text-center">
-        <div class="container">
-          <p>
-            <a href="#">About Dave Cox</a> |
-            <a href="https://github.com/Dcoxmen/friend-finder">GitHub Repo</a>
-            <br />
-          </p>
-        </div>
-      </footer>
+      
     </div>
     <div id="resultsModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
