updated all files

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -50,44 +50,44 @@
       <hr />
 
       <h3><strong>Question 1</strong></h3>
-      <h4>I like to take risks and challenges excite you.</h4>
+      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
       <select >
           <option selected hidden>Choose here</option>
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5" selected>5 (Strongly Agree)</option>
+        <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 2</strong></h3>
-      <h4>Do I consider myself a creative person</h4>
+      <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
       <select data-placeholder="" class="chosen-select" id="q2">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
-        <option value="3" selected>3</option>
+        <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 3</strong></h3>
-      <h4>Money is important to me</h4>
+      <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
       <select data-placeholder="" class="chosen-select" id="q3">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
-        <option value="4" selected>4</option>
+        <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 4</strong></h3>
-      <h4>I like animals</h4>
+      <h4>You rarely do something just out of sheer curiosity.</h4>
       <select data-placeholder="" class="chosen-select" id="q4">
-        <option value=""></option>
-        <option value="1" selected>1 (Strongly Disagree)</option>
+        <option value="" selected>choose here</option>
+        <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
@@ -95,68 +95,68 @@
       </select>
 
       <h3><strong>Question 5</strong></h3>
-      <h4>I like to go Camping</h4>
+      <h4>People can rarely upset you.</h4>
       <select data-placeholder="" class="chosen-select" id="q5">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
-        <option value="4" selected>4</option>
+        <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 6</strong></h3>
-      <h4>How often do you follow through on what you say you will do?</h4>
+      <h4>It is often difficult for you to relate to other people’s feelings.</h4>
       <select data-placeholder="" class="chosen-select" id="q6">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (No Camping)</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
-        <option value="5" selected>5 (Regularly)</option>
+        <option value="5">5 (Regularly)</option>
       </select>
 
       <h3><strong>Question 7</strong></h3>
-      <h4>I want a party buddy</h4>
+      <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
       <select data-placeholder="" class="chosen-select" id="q7">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
-        <option value="2" selected>2</option>
+        <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 8</strong></h3>
-      <h4>I complete my responsibilities before I go have fun</h4>
+      <h4>You rarely get carried away by fantasies and ideas.</h4>
       <select data-placeholder="" class="chosen-select" id="q8">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
-        <option value="4" selected>4</option>
+        <option value="4" >4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 9</strong></h3>
-      <h4>I like to travel</h4>
+      <h4>You feel more energetic after spending time with a group of people.</h4>
       <select data-placeholder="" class="chosen-select" id="q9">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
-        <option value="4" selected>4</option>
+        <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
       <h3><strong>Question 10</strong></h3>
-      <h4>Being around people who energizes me</h4>
+      <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
       <select data-placeholder="" class="chosen-select" id="q10">
-        <option value=""></option>
+        <option value="" selected>choose here</option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
         <option value="3">3</option>
-        <option value="4" selected>4</option>
+        <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
       <br />
